--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Konami Home Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css">
-    <title>Lab 3</title>
   </head>
+
   <body>
-    <p>Lab 3</p>
+  	<h1>Konami Fitness</h1>
+  	<h2>The snack that smiles back</h2>
+  	<h3></br>ThinkQuizzy</h3>
+  	<img src="thinkQuizzy.png" width="678" height="328">
+  	<p>Entertainment quiz website</p>
+
+  	<h3>Team Members</h3>
+  	<ul>
+  		<li><a href="clark4.html">Teddy Clark</li>
+  		<li><a href="kokkam.html">Michael Kokkatt</li>
+  		<li><a href="riggss.html">Shane Riggs</a></li>
+  	</ul>
   </body>
-</html>
