--- a/riggss.html
+++ b/riggss.html
@@ -13,6 +13,9 @@
       <li>845-551-0062</li>
     </ul>
 
+    <div class="picture">
+      <img src="riggss.jpg" width="188" height="333">
+    </div> 
 
     <h3>Campus Address</h3>
     <h3 class="right">Permanent Address</h3>
@@ -182,5 +185,6 @@
       <li>Fall 2019</li>
     </ul>
   </body>
+
 
 </html>
