--- a/riggss.html
+++ b/riggss.html
@@ -14,7 +14,7 @@
     </ul>
 
     <div class="picture">
-      <img src="riggss.jpg" width="188" height="333">
+      <img src="riggss.jpg" alt="Image of Shane Riggs" width="188" height="333">
     </div> 
 
     <h3>Campus Address</h3>
