--- a/clarke4.html
+++ b/clarke4.html
@@ -15,6 +15,9 @@
       <li>626.773.2628</li>
     </ul>
 
+    <div class="picture">
+      <img src="clarke4.jpeg" alt="Headshot of Teddy Clark"> <!-- width="188" height="333" -->
+    </div>
 
     <h3>Campus Address</h3>
     <h3 class="right">Permanent Address</h3>
