--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <body>
   	<h1>Konami Fitness</h1>
   	<h2>The snack that smiles back</h2>
-  	<h3></br>ThinkQuizzy</h3>
+  	<h3></br>Projects</h3>
+  	<p>ThinkQuizzy</p>
   	<img src="thinkQuizzy.png" width="678" height="328">
   	<p>Entertainment quiz website</p>
 
   	<h3>Team Members</h3>
-  	<ul>
-  		<li><a href="clark4.html">Teddy Clark</li>
-  		<li><a href="kokkam.html">Michael Kokkatt</li>
-  		<li><a href="riggss.html">Shane Riggs</a></li>
-  	</ul>
+  	<div class="row">
+	  	<ul class="left">
+	  		<li class="title"><a href="clark4.html">Teddy Clark</br></a></li>
+	  		<li class="title"><a href="kokkam.html">Michael Kokkatt</br></a></li>
+	  		<li class="title"><a href="riggss.html">Shane Riggs</br></a></li>
+	  		<li><img src="riggss.jpg" width="188" height="333"></li>
+	  	</ul>
+	</div>
   </body>
