--- a/index.html
+++ b/index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Konami Home Page</title>
+    <title>Homepage Team Konami Fitness</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
+    <link href=“https://fonts.googleapis.com/css2?family=Raleway&display=swap” rel=“stylesheet”>
+
   </head>
 
   <body>
-  	<h1>Konami Fitness</h1>
-  	<h2>The snack that smiles back</h2>
-  	<h3></br>Projects</h3>
-  	<p>ThinkQuizzy</p>
-  	<img src="thinkQuizzy.png" width="678" height="328">
-  	<p>Entertainment quiz website</p>
-
-  	<h3>Team Members</h3>
-  	<div class="row">
-	  	<ul class="left">
-	  		<li class="title"><a href="clark4.html">Teddy Clark</br></a></li>
-	  		<li class="title"><a href="kokkam.html">Michael Kokkatt</br></a></li>
-	  		<li class="title"><a href="riggss.html">Shane Riggs</br></a></li>
-	  		<li><img src="riggss.jpg" width="188" height="333"></li>
-	  	</ul>
-	</div>
+    <h1>Konami Fitness</h1>
+   <p class = "slogan"><em>"Work smarter and harder with Konami Fitness."</em></p>
   </body>
+
+    <nav class="team">
+    <ol>
+        <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
+        <li class="page"><a href="riggss.html">Michael Kokkatt</a></li>
+        <li class="page"><a href ="kokkam.html">Shane Riggs</a></li>
+    </ol>
+	</nav>
+
+	<nav class="team">
+    <ol>
+        <li class="page"><img src = "riggss.jpg" alt = "" width = "150px" height = "200px"/></li>
+        <li class="page"><img src = "riggss.jpg" alt = "me" width = "150px" height = "200px" /></li>
+        <li class="page"><img src = "riggss.jpg" alt = "" width="150px" height="200px"/></li>
+    </ol>
+	</nav>
+
+	<nav class="team">
+    <ol>
+        <li class="page">Teddy has worked on...</li>
+        <li class="page">Michael has worked on...</li>
+        <li class="page">Shane has worked on...</li>
+    </ol>
+	</nav>
+
+
+	<nav class="team">
+    <ol>
+        <li class="pictures"><img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/></li>
+        <li class="pictures"><img src = "thinkQuizzy.png" alt = "" width="300px" height="160px"/></li>
+        <li class="pictures"><img src = "thinkQuizzy.png" alt = "Screenshot of ThinkQuizzy homepage" width="300px" height="160px"/></li>
+    </ol>
+	</nav>
+
+
+</html>
