--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Homepage Team Konami Fitness</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css"/>
-    <link href=“https://fonts.googleapis.com/css2?family=Raleway&display=swap” rel=“stylesheet”>
-
+    <link href=“https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap” rel=“stylesheet”>
   </head>
 
   <body>
