--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 	<nav class="team">
     <ol>
-        <li class="page"><img src = "riggss.jpg" alt = "" width = "150px" height = "200px"/></li>
-        <li class="page"><img src = "riggss.jpg" alt = "me" width = "150px" height = "200px" /></li>
-        <li class="page"><img src = "riggss.jpg" alt = "" width="150px" height="200px"/></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "" width = "300px" height = "300px"/></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "me" width = "300px" height = "300px" /></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "" width="300px" height="300px"/></li>
     </ol>
 	</nav>
 
