--- a/index.html
+++ b/index.html
@@ -22,28 +22,38 @@
 
 	<nav class="team">
     <ol>
-        <li class="pictures"><img src = "riggss.jpg" alt = "" width = "300px" height = "300px"/></li>
-        <li class="pictures"><img src = "riggss.jpg" alt = "me" width = "300px" height = "300px" /></li>
-        <li class="pictures"><img src = "riggss.jpg" alt = "" width="300px" height="300px"/></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "" width = "250px" height = "250px"/></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "me" width = "250px" height = "250px" /></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "" width="250px" height="250px"/></li>
     </ol>
 	</nav>
 
-	<nav class="team">
-    <ol>
-        <li class="page">Teddy has worked on...</li>
-        <li class="page">Michael has worked on...</li>
-        <li class="page">Shane has worked on...</li>
-    </ol>
-	</nav>
+	<div class="row">
+        <p class="left">
+            Teddy has worked on...
+        </p>
+        <p class="right">
+            <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+        </p>
+	</div>
 
+    <div class="row">
+        <p class="right">
+            Michael has worked on...
+        </p>
+        <p class="left">
+            <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+        </p>
+    </div>
 
-	<nav class="team">
-    <ol>
-        <li class="pictures"><img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/></li>
-        <li class="pictures"><img src = "thinkQuizzy.png" alt = "" width="300px" height="160px"/></li>
-        <li class="pictures"><img src = "thinkQuizzy.png" alt = "Screenshot of ThinkQuizzy homepage" width="300px" height="160px"/></li>
-    </ol>
-	</nav>
+    <div class="row">
+        <p class="left">
+            Shane has worked on...
+        </p>
+        <p class="right">
+            <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+        </p>
+    </div>
 
 
 </html>
