--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="team">
     <ol>
         <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
-        <li class="page"><a href="riggss.html">Michael Kokkatt</a></li>
-        <li class="page"><a href ="kokkam.html">Shane Riggs</a></li>
+        <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
+        <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
     </ol>
 	</nav>
 
