--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 	<nav class="team">
     <ol>
-        <li class="pictures"><img src = "clarke4.PNG" alt = "" width = "250px" height = "250px"/></li>
-        <li class="pictures"><img src = "IMG_1482.jpeg" alt = "me" width = "250px" height = "250px" /></li>
+        <li class="pictures"><img src = "clarke4.jpeg" alt = "" width = "250px" height = "250px"/></li>
+        <li class="pictures"><img src = "IMG_1482.PNG" alt = "me" width = "250px" height = "250px" /></li>
         <li class="pictures"><img src = "riggss.jpg" alt = "" width="250px" height="250px"/></li>
     </ol>
 	</nav>
