--- a/index.html
+++ b/index.html
@@ -18,43 +18,48 @@
         <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
         <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
     </ol>
-	</nav>
+    </nav>
 
-	<nav class="team">
+    <nav class="team">
     <ol>
         <li class="pictures"><img src = "clarke4.jpeg" alt = "" width = "250px" height = "250px"/></li>
         <li class="pictures"><img src = "IMG_1482.PNG" alt = "me" width = "250px" height = "250px" /></li>
         <li class="pictures"><img src = "riggss.jpg" alt = "" width="250px" height="250px"/></li>
     </ol>
-	</nav>
-
-	<div class="row">
-        <p class="left">
-            Teddy has worked on...
-        </p>
-        <p class="right">
-            <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
-        </p>
-	</div>
+    </nav>
 
     <div class="row">
-        <p class="right">
-            Michael has worked on...
-        </p>
-        <p class="left">
-            <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
-        </p>
+        <ul>
+            <li class="left">
+                Teddy has worked on...
+            </li>
+            <li class="right">
+                <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+            </li>
+        </ul>
     </div>
 
     <div class="row">
-        <p class="left">
-            Shane has worked on...
-        </p>
-        <p class="right">
-            <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
-        </p>
+        <ul>
+            <li class="right">
+                Michael has worked on...
+            </li>
+            <li class="left">
+                <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+            </li>
+        </ul>
+    </div>
+
+    <div class="row">
+        <ul>
+            <li class="left">
+                Shane has worked on...
+            </li>
+            <li class="right">
+                <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+            </li>
+        </ul>
     </div>
 
 
 </html>
-
