--- a/kokkam.html
+++ b/kokkam.html
@@ -4,29 +4,45 @@
     <title>Michael Kokkatt's Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="profile" href="http://microformats.org/profile/hcard">
+
   </head>
 
   <body>
     <h1>Michael Kokkatt</h1>
-    <ul class="contact">
-      <li><a href="mailto:mkokkatt57000@gmail.com">mkokkatt57000@gmail.com</a></li>
-      <li>914-707-2756</li>
-    </ul>
-
-
-    <h3>Campus Address</h3>
-    <h3 class="right">Permanent Address</h3>
-
-    <div class="row">
-      <ul class="left">
-        <li>2206 14th St</li>
-        <li>Troy, NY 12180</li>
-      </ul >
-      <ul class="right">
-        <li>27 Orchard Lane</li>
-        <li>Elmsford, NY 10523</li>
-      </ul >
+    <div class = "picture">
+        <img src = "IMG_1482.PNG" alt = "Me" width = "100px" height = "120px"/>
     </div>
+
+
+<div class="vcard">
+  <a class="email" href="mailto:mkokkatt57000@gmail.com">mkokkatt57000@gmail.com</a>
+    <div class="tel">
+      <dt>Phone (<span class="type">home</span>)</dt>
+      <dd><span class="value">9147072756</span></dd>
+    </div>
+  <div class="adr">
+  	<span class = "type">home
+      <div class="street-address">27 Orchard Lane</div>
+      <span class="locality">Elmsford</span>, 
+      <span class="region">NY</span>, 
+      <span class="postal-code">10253</span>
+      <span class="country-name">USA</span>
+    </span>
+  </div>
+  <div class="adr">
+    <span class = "type">pref
+      <div class="street-address">2206 14th St</div>
+      <span class="locality">Troy</span>, 
+      <span class="region">NY</span>, 
+      <span class="postal-code">12180</span>
+      <span class="country-name">USA</span>
+    </span>
+  </div>
+</div>
+
+
+
 
 
     <h2>Objective:</h2>
