--- a/riggss.html
+++ b/riggss.html
@@ -4,35 +4,51 @@
     <title>Shane Riggs's Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="profile" href="http://microformats.org/profile/hcard">
   </head>
 
   <body>
-    <h1>Shane Riggs</h1>
-    <ul class="contact">
-      <li><a href="mailto:riggsshane@gmail.com">riggsshane@gmail.com</a></li>
-      <li>845-551-0062</li>
-    </ul>
+    <nav class="team">
+      <ol>
+          <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
+          <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
+          <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
+      </ol>
+    </nav>
 
+    <h1>Shane Riggs</h1>
     <div class="picture">
-      <img src="riggss.jpg" alt="Image of Shane Riggs" width="188" height="333">
+      <img src="riggss.jpg" alt="Image of Shane Riggs" width="300" height="300">
     </div> 
 
-    <h3>Campus Address</h3>
-    <h3 class="right">Permanent Address</h3>
-
-    <div class="row">
-      <ul class="left">
-        <li>224 Pawling Ave.</li>
-        <li>Troy, NY 12180</li>
-      </ul >
-      <ul class="right">
-        <li>19 S Pascack Rd</li>
-        <li>Pearl River, NY 10965</li>
-      </ul >
+  <div class="vcard">
+    <a class="email" href="mailto:riggsshane@gmail.com">riggsshane@gmail.com</a>
+    <div class="tel">
+      <dt>Phone (<span class="type">Cell</span>)</dt>
+      <dd><span class="value">8455510062</span></dd>
     </div>
+    <div class="adr">
+      <span class = "type">Home
+        <div class="street-address">19 S Pascack Rd</div>
+        <span class="locality">Pearl River</span>, 
+        <span class="region">NY</span>, 
+        <span class="postal-code">10965</span>
+        <span class="country-name">USA</span>
+      </span>
+    </div>
+    <div class="adr">
+      <span class = "type">Campus
+        <div class="street-address">224 Pawling Ave</div>
+        <span class="locality">Troy</span>, 
+        <span class="region">NY</span>, 
+        <span class="postal-code">12180</span>
+        <span class="country-name">USA</span>
+      </span>
+    </div>
+  </div>
 
 
-    <h2>Objective:</h2>
+  <h2>Objective:</h2>
     <p>
       Seeking a full time position in the field of data management and analytics.
     </p>
