--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ol>
     </nav>
 
-    <div class="row">
+    <div class="bottomind">
         <ul>
             <li class="left">
                 Teddy has worked on...
@@ -39,7 +39,7 @@
         </ul>
     </div>
 
-    <div class="row">
+    <div class="bottomind">
         <ul>
             <li class="right">
                 Michael has worked on...
@@ -50,7 +50,7 @@
         </ul>
     </div>
 
-    <div class="row">
+    <div class="bottomind">
         <ul>
             <li class="left">
                 Shane has worked on...
