--- a/kokkam.html
+++ b/kokkam.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+   
     <title>Michael Kokkatt's Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style1.css"/>
     <link rel="profile" href="http://microformats.org/profile/hcard">
 
   </head>
 
   <body>
+  	  <nav class="team">
+    	<ol>
+          <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
+          <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
+          <li class="page"><a href ="index.html">Home</a></li>
+    	</ol>
+    </nav>
     <h1>Michael Kokkatt</h1>
     <div class = "picture">
         <img src = "IMG_1482.PNG" alt = "Me" width = "100px" height = "120px"/>
