--- a/riggss.html
+++ b/riggss.html
@@ -10,9 +10,9 @@
   <body>
     <nav class="team">
       <ol>
+          <li class="page"><a href ="index.html">Home</a></li>
           <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
           <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
-          <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
       </ol>
     </nav>
 
