--- a/clarke4.html
+++ b/clarke4.html
@@ -4,35 +4,42 @@
     <title>Edward Clark's Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="profile" href="http://microformats.org/profile/hcard">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <h1>Edward Clark</h1>
-    <ul class="contact">
-      <li><a href="mailto:edwardclarkiii@gmail.com">edwardclarkiii@gmail.com</a></li>
-      <li><a href="http://www.linkedin.com/in/edward-clark-iii">http://www.linkedin.com/in/edward-clark-iii</a></li>
-      <li><a href="https://github.com/teddy-clark">https://github.com/teddy-clark</a></li>
-      <li>626.773.2628</li>
-    </ul>
 
     <div class="picture">
       <img src="clarke4.jpeg" alt="Headshot of Teddy Clark"> <!-- width="188" height="333" -->
     </div>
 
-    <h3>Campus Address</h3>
-    <h3 class="right">Permanent Address</h3>
-
-    <div class="row">
-      <ul class="left">
-        <li>7 Brunswick Rd.</li>
-        <li>Troy, NY 12180</li>
-      </ul >
-      <ul class="right">
-        <li>2168 S. Atlanic Blvd. #328</li>
-        <li>Monterey Park, CA 91754</li>
-      </ul >
+    <div class="vcard">
+      <a class="email" href="edwardclarkiii@gmail.com">edwardclarkiii@gmail.com</a>
+        <div class="tel">
+          <dt>Phone (<span class="type">home</span>)</dt>
+          <dd><span class="value">6267732628</span></dd>
+        </div>
+      <div class="adr">
+      	<span class = "type">home
+          <div class="street-address">2168 S. Atlanic Blvd. #328</div>
+          <span class="locality">Monterey Park</span>,
+          <span class="region">CA</span>,
+          <span class="postal-code">91754</span>
+          <span class="country-name">USA</span>
+        </span>
+      </div>
+      <div class="adr">
+        <span class = "type">pref
+          <div class="street-address">7 Brunswick Rd.</div>
+          <span class="locality">Troy</span>,
+          <span class="region">NY</span>,
+          <span class="postal-code">12180</span>
+          <span class="country-name">USA</span>
+        </span>
+      </div>
     </div>
-
 
     <h2>Objective:</h2>
     <p>
