--- a/index.html
+++ b/index.html
@@ -1,176 +1,65 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Edward Clark's Resume</title>
+    <title>Homepage Team Konami Fitness</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="style.css">
-    <link rel="profile" href="http://microformats.org/profile/hcard">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"/>
+    <link href=“https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap” rel=“stylesheet”>
   </head>
 
   <body>
-    <h1>Edward Clark</h1>
-
-    <div class="picture">
-      <img src="clarke4.jpeg" alt="Headshot of Teddy Clark"> <!-- width="188" height="333" -->
-    </div>
-
-    <div class="vcard">
-      <a class="email" href="edwardclarkiii@gmail.com">edwardclarkiii@gmail.com</a>
-        <div class="tel">
-          <dt>Phone (<span class="type">home</span>)</dt>
-          <dd><span class="value">6267732628</span></dd>
-        </div>
-      <div class="adr">
-      	<span class = "type">home
-          <div class="street-address">7 Brunswick Rd.</div>
-          <span class="locality">Troy</span>,
-          <span class="region">NY</span>,
-          <span class="postal-code">12180</span>
-          <span class="country-name">USA</span>
-        </span>
-      </div>
-      <div class="adr">
-        <span class = "type">pref
-          <div class="street-address">2168 S. Atlanic Blvd. #328</div>
-          <span class="locality">Monterey Park</span>,
-          <span class="region">CA</span>,
-          <span class="postal-code">91754</span>
-          <span class="country-name">USA</span>
-        </span>
-      </div>
-    </div>
-
-    <h2>Objective:</h2>
-    <p>
-      A highly motivated student looking to obtain a summer internship in the
-      field of Information Technology and Web Science, with special interest in
-      financial analytics and web development.
-    </p>
-
-
-    <h2>Education:</h2>
-    <div class="row">
-      <ul class="left">
-        <li class="title">Rensselaer Polytechnic Institute (RPI)</li>
-        <li class="location">, Troy, NY</li>
-        <li>Bachelor of Science, Information Technology and Web Science</li>
-        <li>Bachelor of Science, Business Analytics</li>
-        <li>Rensselaer Leadership Award (Fall 2018 – Present), Rennselaer Dean’s Honor List (Fall 2018)</li>
-      </ul>
-      <ul class="right">
-        <li>May 2020</li>
-        <li>Major GPA: 3.15</li>
-      </ul>
-    </div>
-
-    <div class="row">
-      <ul class="left">
-        <li class="title">Maranatha High School</li>
-        <li class="location">, Pasadena, CA</li>
-        <li>Highest Honors (Spring 2018)</li>
-      </ul>
-      <ul class="right">
-        <li>May 2020</li>
-        <li>GPA: 4.22 / 4.857</li>
-      </ul>
-    </div>
-
-
-    <h2>Relevant Experience / Projects:</h2>
-    <div class="row">
-      <ul class="left">
-        <li class="title">Alt Legal – IP Management Software</li>
-        <li class="location">, New York, NY (Remote) </li>
-        <li class="position">Data Analyst Intern</li>
-        <li class="dots">Updated webpages on Alt Legal Blog to improve SEO with Google Analytics</li>
-        <li class="dots">Managed 25,000+ customer accounts with Salesforce, Name Warden, Excel, and Google sheets</li>
-        <li class="dots">Successfully analyzed 2,250 applications with API to provide data for software expansion</li>
-        <li class="dots">Proposed revisions to improve clarity within support articles to assist customers</li>
-      </ul>
-      <ul class="right">
-        <li>May 2020 – August 2020</li>
-      </ul>
-    </div>
-
-    <div class="row">
-      <ul class="left">
-        <li class="title">Operations Management, RPI</li>
-        <li class="dots">Member of a 2-person team that utilized transformation systems to improve the quality of processes within Masseria Cantagallo, an agricultural company in the south of Italy</li>
-        <li class="dots">Analyzed company data with Excel to develop and present a new strategy to improve operations and reduce production time by 18.5% with Microsoft PowerPoint</li>
-      </ul>
-      <ul class="right">
-        <li>Fall 2019</li>
-      </ul>
-    </div>
-
-    <div class="row">
-      <ul class="left">
-        <li class="title">Introduction to Information Technology Web Science, RPI</li>
-        <li class="dots">Collaborated in a 3-person team that designed and implemented an organizational management tool website to simplify individual planning using HTML, CSS, and jQuery</li>
-      </ul>
-      <ul class="right">
-        <li>Spring 2018</li>
-      </ul>
-    </div>
-
-
-    <h2>Skills:</h2>
-    <div class="row">
-      <ul class="skill">
-        <li class="skilltitle">Proficient:</li>
-        <li class="skilltitle">Basic:</li>
-        <li class="skilltitle">Languages:</li>
-      </ul>
-      <ul class="left">
-        <li>C++, Python, HTML, CSS, Microsoft Suite, Adobe Suite</li>
-        <li>SQL, JavaScript, PHP, JSON, jQuery, Ajax, Database, XML</li>
-        <li>French</li>
-      </ul>
-    </div>
-
-    <h2>Other Work Experience:</h2>
-    <div class="row">
-      <ul class="left">
-        <li class="title">RPI Intramural Programs</li>
-        <li class="location">, Troy, NY</li>
-        <li class="position">Hockey Supervisor and Referee</li>
-        <li class="dots">Communicated with officials and players to quickly and efficiently resolve conflicts</li>
-        <li class="dots">Arrived prepared for every scheduled game to ensure fair play and safety for all</li>
-      </ul>
-      <ul class="right">
-        <li>October 2019 – Present</li>
-      </ul>
-    </div>
-
-    <div class="row">
-      <ul class="left">
-        <li class="title">Law Offices of Geragos & Geragos</li>
-        <li class="location">, Los Angeles, CA</li>
-        <li class="position">Administrative Assistant Office Manager</li>
-        <li class="dots">Proficiently managed clerical duties pertaining to a law office</li>
-        <li class="dots">Developed and perfected time management skills by filing court documents</li>
-        <li class="dots">Greeted visitors and directed them to their scheduled conference room</li>
-      </ul>
-      <ul class="right">
-        <li>May 2019 – August 2019</li>
-      </ul>
-    </div>
-
-
-    <h2>Leadership / Community Involvement:</h2>
-    <ul class="left">
-      <li>Hack RPI, Vice Director of Logistics</li>
-      <li>Lambda Chi Alpha, Community Service Chair</li>
-      <li>Society for Hispanic Professional Engineers (SHPE), Committee Member</li>
-      <li>Club Crew Team, Member</li>
-    </ul>
-    <ul class="right">
-      <li>Spring 2020 - Present</li>
-      <li>Spring 2019 – Present</li>
-      <li>Fall 2018 – Present</li>
-      <li>Fall 2018 – Present</li>
-    </ul>
+    <h1>Konami Fitness</h1>
+   <p class = "slogan"><em>"Work smarter and harder with Konami Fitness."</em></p>
   </body>
+
+    <nav class="team">
+    <ol>
+        <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
+        <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
+        <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
+    </ol>
+    </nav>
+
+    <nav class="team">
+    <ol>
+        <li class="pictures"><img src = "clarke4.jpeg" alt = "" width = "250px" height = "250px"/></li>
+        <li class="pictures"><img src = "IMG_1482.PNG" alt = "me" width = "250px" height = "250px" /></li>
+        <li class="pictures"><img src = "riggss.jpg" alt = "" width="250px" height="250px"/></li>
+    </ol>
+    </nav>
+
+    <div class="bottomind">
+        <ul>
+            <li class="left">
+                Teddy has worked on...
+            </li>
+            <li class="right">
+                <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+            </li>
+        </ul>
+    </div>
+
+    <div class="bottomind">
+        <ul>
+            <li class="right">
+                Michael has worked on...
+            </li>
+            <li class="left">
+                <img src = "iit.png" alt = "" width="300px"height="160px"/>
+            </li>
+        </ul>
+    </div>
+
+    <div class="bottomind">
+        <ul>
+            <li class="left">
+                Shane has worked on...
+            </li>
+            <li class="right">
+                <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+            </li>
+        </ul>
+    </div>
+
 
 </html>
