--- a/riggss.html
+++ b/riggss.html
@@ -3,8 +3,8 @@
   <head>
     <title>Shane Riggs's Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="style.css">
-    <link rel="profile" href="http://microformats.org/profile/hcard">
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="profile" href="http://microformats.org/profile/hcard"/>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
 
     <h1>Shane Riggs</h1>
     <div class="picture">
-      <img src="riggss.jpg" alt="Image of Shane Riggs" width="300" height="300">
+      <img src="riggss.jpg" alt="Image of Shane Riggs" width="300" height="300"/>
     </div> 
 
   <div class="vcard">
@@ -64,7 +64,7 @@
       </ul>
       <ul class="right">
         <li>May 2021</li>
-        <li>GPA: 2.95<li>
+        <li>GPA: 2.95</li>
       </ul>
     </div>
 
@@ -86,7 +86,7 @@
       </ul>
       <ul class="right">
         <li>Transferred Dec 2017</li>
-        <li>GPA: 3.5<li>
+        <li>GPA: 3.5</li>
       </ul>
     </div>
 
@@ -97,7 +97,7 @@
       </ul>
       <ul class="right">
         <li>June 2016</li>
-        <li>GPA: 3.2<li>
+        <li>GPA: 3.2</li>
       </ul>
     </div>
 
