--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Teddy has worked on...
             </li>
             <li class="right">
-                <img src = "thinkQuizzy.png" alt = "" width="300px"height="160px"/>
+                <img src = "clark.message.3.jpg" alt = "" width="300px"height="160px"/>
             </li>
         </ul>
     </div>
