--- a/kokkam.html
+++ b/kokkam.html
@@ -4,7 +4,7 @@
    
     <title>Michael Kokkatt's Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="style1.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="profile" href="http://microformats.org/profile/hcard">
 
   </head>
