--- a/clarke4.html
+++ b/clarke4.html
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+    <nav class="team">
+      <ol>
+        <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
+        <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
+        <li class="page"><a href ="index.html">Home</a></li>
+      </ol>
+    </nav>
+
     <h1>Edward Clark</h1>
 
     <div class="picture">
