--- a/clarke4.html
+++ b/clarke4.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="team">
       <ol>
-        <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
+        <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
         <li class="page"><a href ="riggss.html">Shane Riggs</a></li>
         <li class="page"><a href ="index.html">Home</a></li>
       </ol>
