--- a/riggss.html
+++ b/riggss.html
@@ -5,14 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css"/>
     <link rel="profile" href="http://microformats.org/profile/hcard"/>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <nav class="team">
       <ol>
-          <li class="page"><a href ="index.html">Home</a></li>
           <li class="page"><a href="clarke4.html">Teddy Clark</a></li>
           <li class="page"><a href="kokkam.html">Michael Kokkatt</a></li>
+          <li class="page"><a href ="index.html">Home</a></li>
       </ol>
     </nav>
 
