--- a/kokkam.html
+++ b/kokkam.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="style.css"/>
     <link rel="profile" href="http://microformats.org/profile/hcard">
-
+    <link href=“https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap” rel=“stylesheet”>
   </head>
 
   <body>
